# uah-timesheet-filler

./: .gitignore  ESSC Labor Report Timesheet - 2026 BLANK.xlsx  README.md  details.example.toml  details.example.yaml  pyproject.toml
src/timesheet_filler/: __init__.py  __main__.py  cli.py  config.py  exporter.py  filler.py
