[project]
name = "timesheet-filler"
version = "0.1.0"
description = "Automates filling Excel timesheets and exporting to PDF"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.0",
    "pypdf>=4.0.0",
]

[project.scripts]
timesheet-filler = "timesheet_filler.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/timesheet_filler"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
